# kaggle_eye_in_the_sky

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb  kaggle_code.ipynb
